force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__AmountOfInboundDepositUSDForCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfInboundDepositUSDForCash__c</fullName>
    <label>AMOUNT OF INBOUND DEPOSIT(USD)-CASH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>