force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__AmountOfOutboundDepositLocalForCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfOutboundDepositLocalForCash__c</fullName>
    <label>AMOUNT OF OUTBOUND DEPOSIT(LOCAL)-CASH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>