force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__AmountOfOutboundDepositLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfOutboundDepositLocalFormula__c</fullName>
    <formula>clofor_com_cfs__Deposit__r.clofor_com_cfs__TotalAmountOfDepositToVendor__c</formula>
    <label>AMOUNT OF OUTBOUND DEPOSIT(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>