force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__AmountOfOutboundDepositUSDForCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfOutboundDepositUSDForCash__c</fullName>
    <label>AMOUNT OF OUTBOUND DEPOSIT(USD)-FOR CASH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>