force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__AmountReceivedFromCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedFromCustomerLocal__c</fullName>
    <formula>clofor_com_cfs__Deposit__r.clofor_com_cfs__AmountReceivedFromCustomerLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT RECEIVED FROM CUSTOMER(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>