force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__AmountReceivedFromCustomerUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountReceivedFromCustomerUSD__c</fullName>
    <formula>clofor_com_cfs__Deposit__r.clofor_com_cfs__AmountReceivedFromCustomerUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT RECEIVED FROM CUSTOMER(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>