force-app/main/default/objects/clofor_com_cfs__DepositCash__c/fields/clofor_com_cfs__Deposit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Deposit__c</fullName>
    <label>DEPOSIT</label>
    <referenceTo>clofor_com_cfs__Deposit__c</referenceTo>
    <relationshipLabel>DEPOSIT+CASH</relationshipLabel>
    <relationshipName>DepositCash</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>